--- a/Kotano.DividendTaxCalculator.UI/Pages/Index.razor
+++ b/Kotano.DividendTaxCalculator.UI/Pages/Index.razor
@@ -7,42 +7,44 @@
 
 
 <div class="container pt-4">
+    <div class="row">
     <h1 class="mb-5">WITHDRAWAL TAX CALCULATOR</h1>
-    <form class="col-md-6" onsubmit="return false">
-        <div class="mb-4">
-            <label for="desiredAmount" class="form-label">Enter the amount needed:</label>
-            <input class="form-control" id="desiredAmount" type="number" bind="@DesiredAmount" @oninput="@(ParseDesiredAmountInput)" aria-describedby="desiredAmountHelp" />
-        </div>
-
-        <div class="mb-4">
-            <label for="taxRate" class="form-label">Enter the tax rate (%):</label>
-            <input class="form-control" id="taxRate" type="number" bind="@TaxRate" @oninput="@(ParseTaxRateInput)" aria-describedby="taxRateHelp" />
-            <div id="taxRateHelp" class="form-text">Up to 99%</div>
-
-        </div>
-
-        <div class="mb-4">
-            <button type="submit" class="btn btn-primary" disabled="@(_isTaskRunning ? "disabled" : null)" @onclick="DoCalculation">@_buttonText</button>
-        </div>
-
-        @if (_showResult)
-        {
-            <div class="bg-light p-4">
-                <div class="mb-3">
-                    Minimum withdrawal amount:
-                    <div class="h3">@_result.MinimumWithdrawalAmount.ToString("C")</div>
-                </div>
-                <div class="mb-3">
-                    Set aside for tax:
-                    <div class="h3">@_result.TaxAmount.ToString("C")</div>
-                </div>
+        <form onsubmit="return false">
+            <div class="mb-4">
+                <label for="desiredAmount" class="form-label">Enter the amount needed:</label>
+                <input class="form-control" id="desiredAmount" type="number" bind="@DesiredAmount" @oninput="@(ParseDesiredAmountInput)" aria-describedby="desiredAmountHelp"/>
             </div>
-        }
 
-        <div class="mt-5">
-            <small>Kotano Ltd. <a href="mailto:feedback@kotano.com">Submit feedback</a>.</small>
-        </div>
-    </form>
+            <div class="mb-4">
+                <label for="taxRate" class="form-label">Enter the tax rate (%):</label>
+                <input class="form-control" id="taxRate" type="number" bind="@TaxRate" @oninput="@(ParseTaxRateInput)" aria-describedby="taxRateHelp"/>
+                <div id="taxRateHelp" class="form-text">Up to 99%</div>
+
+            </div>
+
+            <div class="mb-4">
+                <button type="submit" class="btn btn-primary" disabled="@(_isTaskRunning ? "disabled" : null)" @onclick="DoCalculation">@_buttonText</button>
+            </div>
+
+            @if (_showResult)
+            {
+                <div class="bg-light p-4">
+                    <div class="mb-3">
+                        Minimum withdrawal amount:
+                        <div class="h3">@_result.MinimumWithdrawalAmount.ToString("C")</div>
+                    </div>
+                    <div class="mb-3">
+                        Set aside for tax:
+                        <div class="h3">@_result.TaxAmount.ToString("C")</div>
+                    </div>
+                </div>
+            }
+
+            <div class="mt-5">
+                <small>Kotano Ltd. <a href="mailto:feedback@kotano.com">Submit feedback</a>.</small>
+            </div>
+        </form>
+    </div>
 </div>
 
 
